workloads/lacoope/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacoope-backend
  namespace: lacoope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lacoope-backend
  template:
    metadata:
      labels:
        app: lacoope-backend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: backend
          image: ghcr.io/bapttf/lacoopebackend:0.2.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
