workloads/lacoope/backend/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lacoope-api-ingress
  namespace: lacoope
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lacoope-api.bapttf.com`)
      kind: Rule
      services:
        - name: lacoope-backend
          port: 8080
  tls: {}
